--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -856,19 +856,9 @@ a:hover {
 
 .skill-mf span {
   color: #4e4e4e;
+  font-weight: bold;
 }
 
-.skill-mf .progress {
-  background-color: #cde1f8;
-  margin: 0.5rem 0 1.2rem 0;
-  border-radius: 0;
-  height: 0.7rem;
-}
-
-.skill-mf .progress .progress-bar {
-  height: 0.7rem;
-  background-color: #0078ff;
-}
 
 /*--------------------------------------------------------------
 # Services
